--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
-    "version":2,
-    "builds":[
-        {
-            "src": "index.js",
-            "use":"@now/node"
-        }
+    "version": 2,
+    "routes": [
+      { "src": "/(.*)", "dest": "/" }
     ]
-}
+  }
+  
